; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_LISTVIEW_InvalidateSelectedItems.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_LISTVIEW_InvalidateSelectedItems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_11__ = type { i32 }

@LVIS_SELECTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*)* @LISTVIEW_InvalidateSelectedItems to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LISTVIEW_InvalidateSelectedItems(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca %struct.TYPE_11__, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %4 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %5 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 0
  %7 = call i32 @iterator_frameditems(%struct.TYPE_11__* %3, %struct.TYPE_10__* %4, i32* %6)
  br label %8

8:                                                ; preds = %23, %1
  %9 = call i64 @iterator_next(%struct.TYPE_11__* %3)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %8
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @LVIS_SELECTED, align 4
  %16 = call i64 @LISTVIEW_GetItemState(%struct.TYPE_10__* %12, i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %11
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %3, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @LISTVIEW_InvalidateItem(%struct.TYPE_10__* %19, i32 %21)
  br label %23

23:                                               ; preds = %18, %11
  br label %8

24:                                               ; preds = %8
  %25 = call i32 @iterator_destroy(%struct.TYPE_11__* %3)
  ret void
}

declare dso_local i32 @iterator_frameditems(%struct.TYPE_11__*, %struct.TYPE_10__*, i32*) #1

declare dso_local i64 @iterator_next(%struct.TYPE_11__*) #1

declare dso_local i64 @LISTVIEW_GetItemState(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @LISTVIEW_InvalidateItem(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @iterator_destroy(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
